prepping website for tube ads

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://stagedoorapp.com" />
   <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
   <meta name="description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -128,22 +128,19 @@
   })(window,document,'script','dataLayer','GTM-MQWRJJ');</script>
   <!-- End Google Tag Manager -->
 
-  <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
-    <nav class="homepage--navigation">
-      <a href="https://stagedoorapp.com" class="current" title="Back to Homepage">Home</a>
+  <div class="container  padding--top-two-spaces  position--relative">
+    <nav class="max-width--1200  horizontal--center  homepage--navigation">
       <a href="https://stagedoorapp.com/podcast" title="Ad Lib Podcast">Podcast</a>
-      <a href="https://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
-      <!-- <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a> -->
+      <a href="https://stagedoorapp.com/partners" title="Become a partner" class="hide-on-mobile">Claim page</a>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app" class="button  display--inline-block">Download <span class="hide-on-mobile"> app</span></a>
     </nav>
 
-    <section class="padding--bottom-one-space  show-on-mobile  text--center">
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
-      <h2>Stagedoor</h2>
+    <section class="max-width--1200  horizontal--center  padding--bottom-one-space  show-on-mobile  text--center">
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--middle" /></a><h2 class="display--inline-block  vertical-align--middle  padding--left-one-space">Stagedoor</h2>
     </section>
 
-    <section class="cf">
+    <section class="max-width--1200  horizontal--center  cf">
       <div class="float--left  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
           <img src="images/phone-screenshot.jpg" alt="stagedoor london theatre app" class="iphone-screenshot__inside" />
@@ -151,54 +148,60 @@
         </span>
       </div>
 
-      <div class="float--right  width--60  margin--top-four-spaces">
+      <div class="float--right  width--60  margin--top-three-spaces  text">
         <header class="padding--bottom-one-space  hide-on-mobile">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" width="92" class="block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space  vertical-align--middle  h2--giga">Stagedoor</h2>
         </header>
-
-        <h1 class="padding--top-two-spaces">The must-have <strong>app for the London theatre</strong> lover.</h1>
-        <h2 class="center-on-mobile">Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Discover, save, and rate your favourite London theatre shows and creatives.</h2>
-        <p class="text--bigger  margin--top-two-spaces">
+        <h1 class="padding--top-two-spaces">All of London’s theatre at your fingertips.</h1>
+        <h2 class="padding--top-one-space">Discover brilliant theatre with London’s most comprehensive guide. Thousands of audience and critic reviews. Personalised recommendations. Seamless booking.</h2>
+        <p class="text--bigger  padding--top-two-spaces">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download on your iPhone</a>
         </p>
-        <small class="opacity--50  padding--top-half-space  center-on-mobile">Currently only for iPhones. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
+        <small class="opacity--50">Android version coming very soon!</a></small>
       </div>
     </section>
 
-    <section class="margin--top-bottom-two-spaces  center-on-mobile">
-      <p class="text--center">
-        <small class="text--section  has-rectangle  block--inline">Why Stagedoor?</small>
-      </p>
 
-      <div class="columns--3  margin--top-two-spaces">
-        <div>
-          <h2>Stay up-to-date</h2>
-          <p class="text--bigger">Follow directors, writers, cast, and venues, so you know what&rsquo;s on. Be the first to find out about any <strong>London production</strong> however big or small.</p>
+    <section class="margin--top-four-spaces  padding--top-two-spaces  position--relative  text  has-overflow-on-desktop--js">
+      <div class="padding--top-bottom-six-spaces  max-width--1200  horizontal--center">
+        <header class="header--purple  header--no-margin">
+          Meet Stagedoor
+        </header>
+
+        <div class="max-width--600">
+          <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">IMDB for theatre.</h2>
+            <h2>Stagedoor is London’s most comprehensive and innovative theatre guide.</h2>
+          </div>
+
+          <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">Stay up to date.</h2>
+            <h2>Follow your favourite directors, writers, actors and venues. Stay up-to-date with their current and upcoming shows.</h2>
+          </div>
+          <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">Smart wishlist.</h2>
+            <h2>Keep track of shows you’re interested in. Get notified when tickets go on sale, reviews are out and before they close.</h2>
+          </div>
+          <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">Instant book.</h2>
+            <h2>Seamlessly book tickets to shows. Say goodbye to entering CC details every time you book at a new venue.</h2>
+          </div>
+          <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">Reviews. Reviews. Reviews.</h2>
+            <h2>Discover shows through thousands of audience and critic reviews. Keep track of all the shows you’ve seen in your theatre journal.</h2>
+          </div>
         </div>
-        <div>
-          <h2>Never miss out</h2>
-          <p class="text--bigger">Discover everything about the theatre shows you want to see. Save them and Stagedoor will notify you when they close, so you never miss out.</p>
-        </div>
-        <div>
-          <h2>Tailor-made for you</h2>
-          <p class="text--bigger">Select from 12 theatre-specific categories and follow curated lists to discover great shows and get personalised recommendations.</p>
-        </div>
+
+        <div class="invest-app-screenshot"  data--100-bottom-top="top:10%;opacity:0;" data--500-bottom-top="top:-1%;opacity:1" data-top="top:-20%"  data--700-top="top:-27%"></div>
       </div>
     </section>
 
-    <section class="margin--top-bottom-two-spaces  text--center">
-      <h2>Discover the shows no one&rsquo;s seen yet.</h2>
-      <p class="text--bigger  margin--top-one-space">
-        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  horizontal--center no-link-colour" title="Download now for iOS">Download Stagedoor</a>
-      </p>
-      <p class="text--bigger  margin--top-two-spaces"><span class="text--yellow">NEW</span> - <a href="https://www.facebook.com/stagedoorapp/videos/1340822345965112/?hc_ref=NEWSFEED">Add your review! Express your voice and join the community &rarr;</a></p>
-    </section>
 
-    <section class="margin--top-four-spaces  center-on-mobile">
-      <p class="text--center">
-        <small class="text--section  has-rectangle  block--inline">Important facts</small>
-      </p>
+    <section class="max-width--1200  horizontal--center  margin--top-eight-spaces">
+      <header class="header--green  header--no-margin">
+        Important facts
+      </header>
 
       <div class="columns--2  margin--top-two-spaces">
         <div>
@@ -207,22 +210,22 @@
         </div>
         <div>
           <h2>Theatre festivals</h2>
-          <p class="text--bigger">Stagedoor is the official app of the biggest theatre festivals in London, <a href="https://stagedoorapp.com/camdenfringe">The Camden Fringe 2018</a>, 2017, and 2016, <a href="https://stagedoorapp.com/vaultfestival">VAULT Festival 2017</a>, listing over 1425 shows and 300 theatre companies.</p>
+          <p class="text--bigger">Stagedoor is the official app of the biggest theatre festivals in London, <a href="https://stagedoorapp.com/camden-fringe/?l=1">The Camden Fringe 2018</a>, 2017, and 2016, <a href="https://stagedoorapp.com/vault-festival/?l=4">VAULT Festival 2017</a>, listing over 1425 shows and 300 theatre companies.</p>
         </div>
       </div>
     </section>
 
-    <section class="margin--top-bottom-two-spaces  text--center">
-      <h2><strong>London&rsquo;s most comprehensive theatre guide</strong>, <br/>tailor-made for you.</h2>
+    <section class="max-width--1200  horizontal--center  text--center  padding--top-bottom-six-spaces">
+      <h2><strong>London&rsquo;s most comprehensive theatre guide</strong>, <span class="display--block  hide-on-mobile"></span>tailor-made for you.</h2>
       <p class="text--bigger  margin--top-one-space">
-        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  horizontal--center no-link-colour" title="Download now for iOS">Get Stagedoor for free!</a>
+        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  display--inline-block  no-link-colour" title="Download now for iOS">Get Stagedoor for free!</a>
       </p>
     </section>
 
-    <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
+    <footer class="opacity--50  text--center  padding--top-two-spaces  padding--bottom-one-space">
       <span class="follow-link-footer">
         <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow"><img src="images/twitter.svg" alt="twitter logo" class="twitter-icon" />@stagedoorLDN</a>
-        <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span>
+        &nbsp;<span class="hide-on-mobile"> &bull; </span>&nbsp;
         <a href="https://fb.com/stagedoorapp" target="_blank" rel="nofollow"><img src="images/facebook.svg" alt="facebook logo" class="facebook-icon" />StagedoorApp</a>
       </span>
 
@@ -240,13 +243,32 @@
 
   <!-- JS scripts -->
   <!--script type="text/javascript" src="scripts/partials/_retina.min.js"></script-->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="scripts/partials/skrollr.min.js"></script>
   <script>
     // detect if iPhone/iPad replace iTunes link with direct App Store link
     if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
       document.getElementById('appstore-link').href="itms://itunes.apple.com/gb/app/stagedoor-london-theatre-app/id963068912"
+    } else {
+      $('.invest-app-screenshot').append('<img src="images/discover-new.jpg" alt="discover screenshot" />');
+      $('.has-overflow-on-desktop--js').addClass('overflow--hidden').children().addClass('has-top-bottom-fade');
+      var $window = $(window);
+      var scrollText = $('.scroll-text');
+
+      // scroller parallax
+      $window.bind("load", function() {
+        var s = skrollr.init({
+          forceHeight: false,
+          mobileCheck: function() {
+            // hack - forces mobile version to be off
+            return false;
+          }
+        });
+      })
     }
   </script>
-  <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script-->
+
   <!--script src="scripts/app.min.js"></script-->
   <!--script src="/scripts/partials/noty.min.js"></script><script>setTimeout(function(){new Noty({text: '<div class="text--center"><p class="text--bigger">Crowdfunding now open.<br/><small>Don’t miss out!</small><a href="https://seedrs.com/stagedoor" class="button  button--white  margin--top-half-space">Own part of Stagedoor</a></p><small class="opacity--50 padding--top-half-space">* Update: 74% funded in 24hrs</small></div>',layout: 'bottomRight',type: 'error',theme: 'metroui',closeWith: ['button']}).show();}, 2500);</script-->
 </body>
