--- a/podcast.html
+++ b/podcast.html
@@ -41,14 +41,17 @@
   })(window,document,'script','dataLayer','GTM-MQWRJJ');</script>
   <!-- End Google Tag Manager-->
 
-  <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative  text">
-    <nav class="podcast">
-      <a href="https://stagedoorapp.com" title="Back to Homepage">Home</a>
-      <a href="https://stagedoorapp.com/podcast" class="current" title="Ad Lib Podcast">Podcast</a>
-      <a href="https://stagedoorapp.com/partners" title="Become a partner">Claim <span class="hide-on-mobile">your</span> page</a>
+  <div class="container  padding--top-two-spaces  position--relative">
+    <nav class="max-width--1200  horizontal--center  homepage--navigation">
+      <a href="https://stagedoorapp.com" title="Home">Home</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
+      <a href="https://stagedoorapp.com/partners" title="Become a partner" class="hide-on-mobile">Claim page</a>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app" class="button  display--inline-block">Download <span class="hide-on-mobile"> app</span></a>
     </nav>
+
+    <section class="max-width--1200  horizontal--center  padding--bottom-one-space  show-on-mobile  text--center">
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--middle" /></a><h2 class="display--inline-block  vertical-align--middle  padding--left-one-space">Stagedoor</h2>
+    </section>
 
 
     <section class="horizontal--center  text--center  padding--top-four-spaces  max-width--850">
