added ability to subscribe to a Mailchimp list if you want the Android version

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
         <h1 class="padding--top-two-spaces">All of London’s theatre at your fingertips.</h1>
         <h2 class="padding--top-one-space">Discover brilliant theatre with London’s most comprehensive guide. Thousands of audience and critic reviews. Personalised recommendations. Seamless booking.</h2>
         <p class="text--bigger  padding--top-two-spaces">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download on your iPhone</a>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download for iPhone</a>
         </p>
-        <small class="opacity--50">Android version coming very soon!</a></small>
+        <small class="opacity--50">Android coming soon! <a href="https://stagedoorapp.us13.list-manage.com/subscribe?u=bbea3bc889240db83089d1bf2&id=1c259e8480" target="_blank" rel="nofollow">Get notified when it’s out!</a></small>
       </div>
     </section>
 
@@ -219,6 +219,7 @@
       <h2><strong>London&rsquo;s most comprehensive theatre guide</strong>, <span class="display--block  hide-on-mobile"></span>tailor-made for you.</h2>
       <p class="text--bigger  margin--top-one-space">
         <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  display--inline-block  no-link-colour" title="Download now for iOS">Get Stagedoor for free!</a>
+        <small class="padding--top-half-space  opacity--50">Android coming soon! <a href="https://stagedoorapp.us13.list-manage.com/subscribe?u=bbea3bc889240db83089d1bf2&id=1c259e8480" target="_blank" rel="nofollow">Get notified when it’s out!</a></small>
       </p>
     </section>
 
