camdenfringe navigation fix

--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -43,26 +43,19 @@
   <!-- End Google Tag Manager -->
 
 
-  <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
-    <nav>
-      <a href="http://stagedoorapp.com" title="Back to Homepage">Home</a>
-      <a href="http://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
+  <div class="container  padding--top-two-spaces  position--relative">
+    <nav class="max-width--1200  horizontal--center  homepage--navigation">
+      <a href="https://stagedoorapp.com/podcast" title="Ad Lib Podcast">Podcast</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
-      <a href="http://bit.ly/camfristgdr" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
-      <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a>
+      <a href="https://stagedoorapp.com/partners" title="Become a partner" class="hide-on-mobile">Claim page</a>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" title="Download iOS app" class="button  button--download  display--inline-block">Download <span class="hide-on-mobile"> app</span></a>
     </nav>
 
-    <section class="show-on-mobile">
-      <header class="margin--bottom-four-spaces">
-        <a href="http://stagedoorapp.com"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
-        <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
-        Stagedoor<br/>
-          <small>Official app of The Camden Fringe.</small>
-        </h2>
-      </header>
+    <section class="max-width--1200  horizontal--center  padding--bottom-one-space  show-on-mobile  text--center">
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--middle" /></a><h2 class="display--inline-block  vertical-align--middle  padding--left-one-space">Stagedoor</h2>
     </section>
 
-    <section class="cf">
+    <section class="max-width--1200  horizontal--center  cf">
       <div class="float--right  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
           <img src="images/theatre/iphone/camdenfringe.jpg" alt="camden fringe app stagedoor official" class="iphone-screenshot__inside" />
