--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <div>
-      <a href="https://alexcican.com/stagedoor/test?v=4&fromBtnOpenApp=true">Test me (has solution)</a><br/>
+      <a href="https://stagedoor.alexcican.com/test?v=4&fromBtnOpenApp=true">Test me (has solution)</a><br/>
    </div>
 
 
